--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -67,7 +67,7 @@
   text-align: center;
   transition: 0.3s;
   box-shadow: var(--text-shadow);
-  z-index: 10;
+  z-index: 50;
   padding-bottom: 10vh;
 }
 
@@ -104,6 +104,10 @@
   .hamburger,
   .hamburgerActive {
     display: none;
+  }
+
+  .mainNav {
+    border-radius: 2rem;
   }
 }
 
